--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -37,7 +37,10 @@ nav ul li a{
 }
 main{
     grid-area: main;
-    background-color:gray;
+    background-color:rgb(192, 188, 188);
+}
+aside{
+    grid-area: aside;
 }
 footer{
     grid-area:footer;
