--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -12,7 +12,7 @@
 }
 body{
     display:grid;
-    grid-template-columns:repeat(2,1fr);
+    grid-template-columns:repeat(2,auto);
     grid-template-rows: auto 2fr auto;
     grid-template-areas:
     "header header"
@@ -69,6 +69,9 @@ header nav a:hover{
 }
 
 main{
+    max-width: 80%;
+    margin:0 auto;
+    padding: 40px; 
     grid-area:main;
     display:grid;
     grid-template-columns: 2fr 1fr;
