--- a/styles/temples.css
+++ b/styles/temples.css
@@ -34,7 +34,6 @@ h1,h2,footer{
 .ham::before{
     content:'≡';
     margin-left:10px;
-    size: 50px;
 }
 .ham.show::before{
     content:"Ⅹ";
@@ -70,7 +69,7 @@ h1,h2,footer{
 }
 
 main{
-    max-width: auto;
+    width: auto;
     margin:0 auto;
     background:var(--main-bg-color)
 }
